tailorbird-task/force-app/main/default/objects/System_Settings__mdt/fields/Automations_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Automations_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automations Enabled</label>
    <type>Checkbox</type>
</CustomField>