tailorbird-task/force-app/main/default/objects/System_Settings__mdt/fields/Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percent__c</fullName>
    <description>System wide comission percentage for an employee completing a delivery</description>
    <label>Commission Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>