tailorbird-task/force-app/main/default/objects/System_Settings__mdt/fields/Validations_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Validations_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validations Enabled</label>
    <type>Checkbox</type>
</CustomField>